--- a/interests.html
+++ b/interests.html
@@ -31,34 +31,37 @@
         <div class="row no-gutters">
           <div class="col">
             <ul id="nav" class="list-inline menucontainer row">
-              <li class="col-6 col-sm-2 ui-menu-color-home menuitem">
+              <li class="col-6 col-sm-4 ui-menu-color-home list-inline-item menu-item">
                 <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home"
                     aria-hidden="true"></i><span>Home</span></a>
               </li>
-              <li class="col-6 col-sm-2 ui-menu-color-resume menuitem">
+              <li class="col-6 col-sm-4 ui-menu-color-resume list-inline-item menu-item">
                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"
                     aria-hidden="true"></i><span>Resume</span></a>
               </li>
-              <li class="col-6 col-sm-2 ui-menu-color-contact menuitem">
+              <li class="col-6 col-sm-4 ui-menu-color-contact list-inline-item menu-item">
                 <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o"
                     aria-hidden="true"></i><span>Contact</span></a>
               </li>
-              <li class="col-6 col-sm-2 ui-menu-color-interests menuitem">
+              <li class="col-6 col-sm-4 ui-menu-color-interests list-inline-item menu-item">
                 <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users"
                     aria-hidden="true"></i><span>Interests</span></a>
               </li>
-              <li class="col-6 col-sm-2 ui-menu-color-github menuitem">
+              <li class="col-6 col-sm-4 ui-menu-color-github list-inline-item menu-item">
                 <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github"
                     aria-hidden="true"></i><span>GitHub</span></a>
               </li>
-              <li class="col-6 col-sm-2 ui-menu-color-download menuitem">
-                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download"
-                    aria-hidden="true"></i><span>Download CV</span></a>
+              <li class="col-6 col-sm-4 ui-menu-color-download list-inline-item menu-item">
+                <a href="assets/cv/sample-cv.pdf" class="hvr-sweep-to-bottom" target="_blank">
+                  <i class="fa fa-download" aria-hidden="true"></i>
+                  <span>Download</span>
+                </a>
               </li>
             </ul>
           </div>
         </div>
       </div>
+    </div>
   </header>
   <section class="container-fluid">
     <div class="row">
@@ -215,11 +218,21 @@
       </div>
     </div>
   </footer>
+  <script>
+    function initMap() {
+      var map = new google.maps.Map(document.getElementById("map"), {
+        zoom: 3,
+        center: {
+          lat: 46.619261,
+          lng: -33.134766
+        }
+      });
+    }
+  </script>
   <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
   </script>
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBE6-cG9YOCjwp28-mLjqbnw89BEHyGbPQ&callback=initMap"></script>
-  <script src="assets/js/maps.js"></script>
 </body>
 
 </html>
