--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,17 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css"
     type="text/css" />
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+  </script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init("Wmd3-Q0oWO8s5hjot");
+      emailjs.send("gmail", "rosie", {
+        name: "Testing",
+        notes: "The project that I want is..."
+      });
+    })();
+  </script>
 </head>
 
 <body>
@@ -67,9 +78,10 @@
         </h3>
         <h5 class="uppercase text-center">Let's work together!</h5>
         <div class="center-form">
-          <form>
+          <form onsubmit="return sendMail(this);">
             <input type="text" name="name" id="fullname" class="form-control" placeholder="Name" required />
-            <input type="text" name="email" id="emailaddress" class="form-control" placeholder="Email" required />
+            <input type="text" name="emailaddress" id="emailaddress" class="form-control" placeholder="Email"
+              required />
             <textarea rows="5" name="projectsummary" id="projectsummary" class="form-control"
               placeholder="Project description" required></textarea>
             <div class="form-row text-center">
@@ -153,6 +165,7 @@
       </div>
     </div>
   </footer>
+  <script src="assets/js/sendEmail.js"></script>
 </body>
 
 </html>
